--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "nanoid": "^4.0.2",
     "prop-types": "^15.8.1",
